# isogeocoder

./: LICENSE  README.md  Untitled.ipynb  continents_sub.csv  countries_subdivision_iso.csv  documentation.md  index.md  iso.ipynb  setup.cfg  sl_school_list.csv  sle_adminboundaries.csv  sub_div_countries.csv  sub_div_countries.xlsx
src/isogeocoder/: contenet.csv  countries.csv  countries_iso.csv  countryiso.csv  geo.py  iso.py
