[metadata]
name = isogeocoder
version = 1.0.0
author = David Moinina Sengeh, Mohamed James,Mosses TF Vibbe
author_email = dsengeh@gmail.com, mohamedjames21@gmail.com, vbmo2007@gmail.com
description =isogeocoder is a tool that generates and assign standardized iso compliant unique identification number or coders for a location and entities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MBSSE-SL/isogeocoder
project_urls =
    Bug Tracker = https://github.com/MBSSE-SL/isogeocoder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
