[metadata]
name = isogeocoder
version = 1.1.0
author = David Moinina Sengeh, Mohamed James,Mosses TF Vibbe
author_email = dsengeh@gmail.com, mohamedjames21@gmail.com, vbmo2007@gmail.com
description =isogeocoder is a tool that generates and assigns standardized iso compliant unique identification numbers or codes for entities based on location information. It can create and assign codes based on a country's administrative division (geo-location) or any administrative level depending on the use case.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MBSSE-SL/isogeocoder
project_urls =
    Bug Tracker = https://github.com/MBSSE-SL/isogeocoder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src